--- a/views/form/Component/revCondition.ejs
+++ b/views/form/Component/revCondition.ejs
@@ -1,6 +1,6 @@
 <label for="revCondition">
     <span>If</span>
-    <select id="revCondition" name="revCondition">
+    <select id="revCondition" class="revCondition" name="revCondition">
         <!-- from js -->
     </select> of the below conditions are met
 </label>
