--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,10 +7,8 @@
 body{
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin: 0;
+    margin: 2em;
     padding: 0;
-    height: 100vh;
 }
 
 h3{
@@ -36,57 +34,86 @@ input:focus{
 }
 
 .revenue-form{
-    height: 500px;
-    display: grid;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .rev-title input{
     width: 100%;  
 }
 
-.rev-rule{
+/* Rulesss */
+/* .rules{
+    margin-bottom: 1.5rem;
+}
+
+.rule{
     position: relative;
     display: grid;
-    grid-template-columns: repeat(2, 100px) auto 50px;
+    grid-template-columns: repeat(2, 100px) auto;
+    grid-template-rows: 30px;
     grid-gap: 5px;
     height: 40px;
+    border:1px solid blue;
+}
+
+.insert-rule,
+.insertRule{
+    display:grid;
+    grid-template-columns: 500px 50px;
 }
 
 .insertRule{
-    position: relative;
-    grid-area: 2 / 3;
+    grid-column: 3 / 4;
 }
 
 .rev-title input,
-.rev-rule input,
+.rule input,
 .num input {
     padding: 8px;
+}
+
+.addRule,
+.insertRule{
+    position: relative;
 }
 
 .addRule span,
 .insertRule span{
     position: absolute;
+    display:inline-block;
     top:10px;
+    width: 150px;
     font-weight: 600;
-    color: rgb(228, 41, 8);
-    left: calc(100% - 135px);
+    color: green;
+    left: calc(100% - 100px);
     cursor: pointer;
 }
-
 .insertRule span{
-    left: calc(100% - 80px);
+    left: calc(100% - 150px);
+}
+
+
+.ruleNum{
+    padding: 5px 5px 5px 0;
+    font-weight: 800;
+    grid-row: 1 / 2;
+    grid-column: 1 / 5;
 }
 
 .addRule input,
 .insertRule input {
-    width: 100%;
+    width:100%;
 }
 
 .icon{
     display:flex;
     justify-content: space-around;
     align-items: center;
-}
+    grid-column: 2 / 3;
+} */
 
 .btn{
     padding: .5em 1em;
