--- a/views/form/Component/addNew.ejs
+++ b/views/form/Component/addNew.ejs
@@ -1,6 +1,12 @@
-<select id="addNew" name="revType">
-        <!-- from js -->
+<select id="addNew" class="revType" name="revType">
+    <option>Js Developer</option>
+    <option>Ruby Developer</option>
+    <option>Php Developer</option>
+
 </select>
-<select id="addNewType" name="addNewType">
-    <!-- from js -->
+<select id="addNewType" class="addNewType" name="addNewType">
+    <option>Senior</option>
+    <option>Junior</option>
+    <option>Entry-Level</option>
+
 </select>
