--- a/views/form/Component/revCondition.ejs
+++ b/views/form/Component/revCondition.ejs
@@ -1,6 +1,9 @@
 <label for="revCondition">
     <span>If</span>
     <select id="revCondition" class="revCondition" name="revCondition">
+        <option>All</option>
+        <option>Half</option>
+        <option>None</option>
         <!-- from js -->
     </select> of the below conditions are met
 </label>
