--- a/views/form/container.ejs
+++ b/views/form/container.ejs
@@ -1,6 +1,7 @@
-<button data-modal-target="#modal" class="btn-modal">Revenue Form</button>
+<!-- open modal btn -->
+<button data-modal-target class="btn-modal">Revenue Form</button>
 <div class="modal" id="modal">
     <%- include('./_modal.ejs') %>
     <%- include('./_form.ejs') %>
 </div>
-<div id="overlay"></div>
+<div data-close-button id="overlay"></div>
