--- a/views/form/_modal.ejs
+++ b/views/form/_modal.ejs
@@ -1,4 +1,5 @@
 <div class="modal-header">
     <h3 class="page-title">Add Revenue Group</h3>
+    <!-- x button to close -->
     <button data-close-button class="close-button">&times;</button>
 </div>
