--- a/views/form/_form.ejs
+++ b/views/form/_form.ejs
@@ -33,18 +33,11 @@
             </div>
         </div>
         <!-- insert New rule -->
-
-        
-
-
     </div>
 
-
-
-    
     <div class="num">
         <p>then revenue is 
-            <input type="text" name="numb" placeholder="only numbers">
+            <input type="number" name="numb" min="1" placeholder="numbers">
         </p>
     </div>
     <div>
