--- a/public/styles/shared/modal.css
+++ b/public/styles/shared/modal.css
@@ -16,7 +16,9 @@
 }
 
 .btn-modal{
-    width: 300px;
+    display:flex;
+    justify-content: flex-end;
+    width: 100%;
     padding: 1em 2em;
     background-color: goldenrod;
     font-weight: 900;
